# auv_core_ros2

./: .gitignore  README.md
auv_core_helper/: CMakeLists.txt  README.md  package.xml
auv_core_helper/include/: helper_lib.hpp
auv_core_helper/include/auv_core_helper/: helper_lib.hpp  path_modes.hpp
auv_core_helper/include/auv_msgs_ros2/: topicnames.hpp
auv_core_helper/msg/: ThrusterForces.msg
auv_core_helper/param/: BlueROV.conf  Remus100.conf  alosed_params.conf  x300.conf
auv_core_helper/param/ctrl/: BlueROV.conf  alosed_params.conf  x300.conf
auv_core_helper/param/dynamic_model/: BlueROV.conf  x300.conf
auv_core_helper/src/: helper_lib.cpp
auv_core_helper/srv/: ControlCommand.srv
dcl/: CMakeLists.txt  README.md  package.xml
dcl/include/dcl/: dynamic_control_layer.hpp  dynamic_control_layer.hpp.bak_20260204_142006
dcl/src/: dynamic_control_layer_node.cpp
dcl/src/dcl/: dynamic_control_layer.cpp  dynamic_control_layer.cpp.bak_20260204_142006
kcl/: CMakeLists.txt  README.md  package.xml
kcl/include/interface/: interface.hpp  interface_class.hpp
kcl/include/kcl/: data_structs.hpp  kcl_class.hpp  kinematic_control_layer.hpp
kcl/include/states/: BaseAUVState.hpp  HoldState.hpp  IdleState.hpp  JoystickState.hpp  PathPlanningState.hpp  TrajectoryPlanningState.hpp  base_auv_state.hpp  commands.hpp  hold_state.hpp  idle_state.hpp  joystick_state.hpp  path_following_state.hpp  path_planning_state.hpp  return_home_state.hpp  trajectory_following_state.hpp  trajectory_planning_state.hpp
kcl/launch/: launch_BlueROV_kcl.py  launch_X300_kcl.py
kcl/src/: interface.cpp  interface_node.cpp  kcl.cpp  kinematic_control_layer_node.cpp
kcl/src/interface/: interface.cpp  interface_class.cpp
kcl/src/kcl/kcl/: kcl_class.cpp  kinematic_control_layer.cpp
kcl/src/kcl/states/: BaseAUVState.cpp  HoldState.cpp  IdleState.cpp  JoystickState.cpp  PathPlanningState.cpp  TrajectoryPlanningState.cpp  base_auv_state.cpp  hold_state.cpp  idle_state.cpp  joystick_state.cpp  path_following_state.cpp  path_planning_state.cpp  return_home_state.cpp  trajectory_following_state.cpp  trajectory_planning_state.cpp
launch/: BlueROV_Gazebo_launch.py  BlueROV_IsaacSim_launch.py  BlueROV_Isaac_Launch.py  BlueROV_core_launch.py  BlueROV_test_launch.py  BlueROV_viz_launch.py  dynamic_delta_BlueROV.txt  x300_core_launch.py  x300_sim_launch.py
sim/: CMakeLists.txt  README.md  package.xml
sim/include/sim/: simulator.hpp  simulator.hpp.bak_20260204_142006
sim/param/: params.yaml
sim/src/: simulator_node.cpp
sim/src/sim/: simulator.cpp
viz/: CMakeLists.txt  README.md  package.xml
viz/config/: auv.rviz
viz/include/viz/: visualizer.hpp
viz/models/: x300.dae
viz/src/: visualizer_node.cpp
viz/src/viz/: visualizer.cpp
