<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kcl</name>
  <version>0.1.0</version>
  <description>Kinematic control Layer for ROS2</description>
  <maintainer email="youssef-attia@live.com">usflinux</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> <!-- Needed for custom message generation -->

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend> 
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend> 
  <depend>tf2_geometry_msgs</depend>
  <depend>auv_core_helper</depend>

  <!-- For consumes messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
